--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -31,3 +31,42 @@
 	height: 50%;
 	background-color: grey;
 }
+#pions
+{
+	display: flex;
+	justify-content: space-around;
+	background-color: grey;
+}
+.pion
+{
+	margin: 5px;
+	border: 2px solid grey;
+	border-radius: 50%;
+	display: inline-block;
+	width: 32px;
+	height: 32px;	
+}
+.jaune
+{
+	background-color: yellow;
+}
+.bleu
+{
+	background-color: blue
+}
+.rouge
+{
+	background-color: red;
+}
+.vert
+{
+	background-color: green;
+}
+.blanc
+{
+	background-color: white;
+}
+.noir
+{
+	background-color: black;
+}
