installation pions en fonction des options

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,9 +20,9 @@ legend {
 
 #ecranJeu {
   display: none;
-  min-width: 280px; }
+  width: 280px; }
 
-.case {
+.case, .caseSecrete {
   margin: 5px;
   border: 2px solid grey;
   border-radius: 50%;
@@ -31,7 +31,7 @@ legend {
   height: 48px;
   background-color: grey; }
 
-.casesRow {
+.casesRow, #rowSecrete {
   display: flex; }
 
 .caseResultatRow {
@@ -49,6 +49,7 @@ legend {
 
 #pions {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
   background-color: grey; }
 
@@ -77,5 +78,17 @@ legend {
 
 .black {
   background-color: black; }
+
+.maroon {
+  background-color: maroon; }
+
+.purple {
+  background-color: purple; }
+
+.orange {
+  background-color: orange; }
+
+.pink {
+  background-color: pink; }
 
 /*# sourceMappingURL=style.css.map */
