--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -1,3 +1,10 @@
+#main
+{
+	#ecranMenuPrincipal
+	{
+		text-align: left;
+	}
+}
 #ecranJeu
 {
 	display: none;
@@ -16,6 +23,11 @@
 .casesRow, #rowSecrete
 {
 	display: flex;
+}
+#rowSecrete
+{
+	border-radius: 10px;
+	background-color: grey;
 }
 .caseResultatRow
 {
