--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,14 +15,34 @@ body {
   background-color: black;
   color: white; }
 
-legend {
+fieldset {
+  margin-bottom: 10px; }
+
+button {
+  margin-bottom: 10px; }
+
+h1 {
+  margin-bottom: 10px;
+  color: orange; }
+
+legend, h3 {
+  width: 100%;
   font-size: 20px; }
+
+h2 {
+  margin-bottom: 10px; }
+
+h3 {
+  border-top: 1px solid orange; }
 
 #main {
   text-align: center; }
 
 #main #ecranMenuPrincipal {
   text-align: left; }
+
+#ecranMenuPrincipal {
+  width: 280px; }
 
 #ecranJeu {
   display: none;
