--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -11,9 +11,31 @@ body
 	background-color: black;
 	color: white;
 }
-legend
+fieldset
 {
+	margin-bottom: 10px;
+}
+button
+{
+	margin-bottom: 10px;
+}
+h1
+{
+	margin-bottom: 10px;
+	color: orange;
+}
+legend, h3
+{
+	width: 100%;
 	font-size: 20px;
+}
+h2
+{
+	margin-bottom: 10px;	
+}
+h3
+{
+	border-top: 1px solid orange;
 }
 #main
 {
