v 1.1 tentatives s'affichent pgsvmt

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,6 +78,7 @@ h3 {
   background-color: grey; }
 
 #pions {
+  bottom: 0px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
