--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@ html, body, div, span, h1, h2, h3, p, form, fieldset, legend, label, input {
   font-weight: normal; }
 
 body {
+  overscroll-behavior: contain;
   display: flex;
   justify-content: center;
   align-items: center;
