--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,7 +62,8 @@ h3 {
   display: flex; }
 
 #rowSecrete {
-  border-radius: 10px;
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
   background-color: grey; }
 
 #recommencer {
@@ -98,12 +99,13 @@ h3 {
   background-color: grey; }
 
 .pion {
-  margin: 5px;
+  margin-top: 5px;
+  margin-bottom: 5px;
   border: 2px solid grey;
   border-radius: 50%;
   display: inline-block;
-  width: 32px;
-  height: 32px; }
+  width: 40px;
+  height: 40px; }
 
 .yellow {
   background-color: yellow; }
