--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -30,7 +30,8 @@
 }
 #rowSecrete
 {
-	border-radius: 10px;
+	border-top-right-radius: 10px;
+	border-top-left-radius: 10px;
 	background-color: grey;
 }
 #recommencer
@@ -72,12 +73,13 @@
 }
 .pion
 {
-	margin: 5px;
+	margin-top: 5px;
+	margin-bottom: 5px;
 	border: 2px solid grey;
 	border-radius: 50%;
 	display: inline-block;
-	width: 32px;
-	height: 32px;	
+	width: 40px;
+	height: 40px;	
 }
 .yellow
 {
