--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,6 +49,16 @@ h3 {
   display: none;
   width: 280px; }
 
+#informations {
+  position: absolute;
+  display: none;
+  width: 280px;
+  text-align: center;
+  font-size: 24px;
+  color: red;
+  text-shadow: 0 0 1px black, 0 0 1px black, 0 0 1px black, 0 0 1px black, 0 0 1px black, 0 0 1px black;
+  pointer-events: none; }
+
 .case, .caseSecrete {
   margin: 5px;
   border: 2px solid grey;
