--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -14,6 +14,17 @@
 	display: none;
 	width: 280px;
 }
+#informations
+{
+	position: absolute;
+	display: none;
+	width: 280px;
+	text-align: center;
+	font-size: 24px;
+	color: red;
+  	text-shadow: 0 0 1px black, 0 0 1px black, 0 0 1px black, 0 0 1px black, 0 0 1px black, 0 0 1px black;
+	pointer-events: none;
+}
 .case, .caseSecrete
 {
 	margin: 5px;
