--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,7 +57,9 @@ h3 {
   font-size: 24px;
   color: red;
   text-shadow: 0 0 1px black, 0 0 1px black, 0 0 1px black, 0 0 1px black, 0 0 1px black, 0 0 1px black;
-  pointer-events: none; }
+  pointer-events: none;
+  background-color: rgba(255, 255, 255, 0.3);
+  height: 58px; }
 
 .case, .caseSecrete {
   margin: 5px;
