--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -24,6 +24,8 @@
 	color: red;
   	text-shadow: 0 0 1px black, 0 0 1px black, 0 0 1px black, 0 0 1px black, 0 0 1px black, 0 0 1px black;
 	pointer-events: none;
+	background-color: rgba(255, 255, 255, .3);
+	height: 58px;
 }
 .case, .caseSecrete
 {
