--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,12 +52,13 @@ h3 {
 #informations {
   display: none;
   width: 280px;
+  height: 58px;
   text-align: center;
   font-size: 24px;
   color: red;
   text-shadow: 0 0 1px black, 0 0 1px black, 0 0 1px black, 0 0 1px black, 0 0 1px black, 0 0 1px black;
   background-color: rgba(255, 255, 255, 0.3);
-  height: 58px; }
+  pointer-events: none; }
 
 .case, .caseSecrete {
   margin: 5px;
