--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -18,12 +18,13 @@
 {
 	display: none;
 	width: 280px;
+	height: 58px;
 	text-align: center;
 	font-size: 24px;
 	color: red;
   	text-shadow: 0 0 1px black, 0 0 1px black, 0 0 1px black, 0 0 1px black, 0 0 1px black, 0 0 1px black;
 	background-color: rgba(255, 255, 255, .3);
-	height: 58px;
+	pointer-events: none;
 }
 .case, .caseSecrete
 {
