--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -17,6 +17,9 @@
 #informations
 {
 	display: none;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 	width: 280px;
 	height: 58px;
 	text-align: center;
