--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,7 +103,10 @@ h3 {
   border: 1px solid black;
   width: 50%;
   height: 50%;
-  background-color: grey; }
+  font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
+  font-weight: 900;
+  background-color: grey;
+  pointer-events: none; }
 
 #pions {
   bottom: 0px;
@@ -150,5 +153,8 @@ h3 {
 
 .pink {
   background-color: pink; }
+
+.regles {
+  font-size: 18px; }
 
 /*# sourceMappingURL=style.css.map */
