--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,7 +67,9 @@ h3 {
   margin: 5px;
   border: 2px solid grey;
   border-radius: 50%;
-  display: inline-block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 48px;
   height: 48px;
   background-color: grey; }
