--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,9 @@ html, body, div, span, h1, h2, h3, p, form, fieldset, legend, label, input {
   vertical-align: baseline;
   font-weight: normal; }
 
+html {
+  pointer-events: none; }
+
 body {
   overscroll-behavior: contain;
   display: flex;
@@ -19,8 +22,12 @@ body {
 fieldset {
   margin-bottom: 10px; }
 
+input {
+  pointer-events: auto; }
+
 button {
-  margin-bottom: 10px; }
+  margin-bottom: 10px;
+  pointer-events: auto; }
 
 h1 {
   margin-bottom: 10px;
@@ -60,8 +67,7 @@ h3 {
   font-size: 24px;
   color: red;
   text-shadow: 0 0 1px black, 0 0 1px black, 0 0 1px black, 0 0 1px black, 0 0 1px black, 0 0 1px black;
-  background-color: rgba(255, 255, 255, 0.3);
-  pointer-events: none; }
+  background-color: rgba(255, 255, 255, 0.3); }
 
 .case, .caseSecrete {
   margin: 5px;
@@ -107,8 +113,7 @@ h3 {
   height: 50%;
   font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
   font-weight: 900;
-  background-color: grey;
-  pointer-events: none; }
+  background-color: grey; }
 
 #pions {
   bottom: 0px;
@@ -124,7 +129,8 @@ h3 {
   border-radius: 50%;
   display: inline-block;
   width: 42px;
-  height: 42px; }
+  height: 42px;
+  pointer-events: auto; }
 
 .yellow {
   background-color: yellow; }
