centrer info combi

--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -78,6 +78,9 @@
 {
 	border-radius: 50%;
 	border: 1px solid black;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	width: 50%;
 	height: 50%;
 	font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
