--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,6 +110,9 @@ h3 {
 .caseResultat {
   border-radius: 50%;
   border: 1px solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 50%;
   height: 50%;
   font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
